--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
 
+# Essential dependencies
+cfbd==4.5.2          # collegfootballdata.com API endpoints
+pandas==2.2.3        # data manipulation & CSV handling
+PyYAML==6.0.2        # Loading configuration from YAML files
+jsonschema==4.23.0   # JSON data loading and manipulation
+flatdict==4.0.1      # JSON flattening of nested structure upon extraction 
+text-unidecode==1.3  # data cleaning & normalization
+parse==1.20.2        # for CLI argument parsing
+parsedatetime==2.6
+SQLAlchemy==2.0.36   # loading data into Postgres
+
+
+
